mirror_lang/test/invalid/division_by_zero.mirror
(SET $a = 10 TES)
(SET $b = 0 TES)
(SET $result = $a / $b TES)